--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -104,6 +104,9 @@
       <label
         for="{{ input_id }}"
       >
+        {% if value.variant.metafields.custom.is_popular %}
+          <div class="most-popular-badge">Most Popular</div>
+        {% endif %}
         <div class="bundle-icon-input-container">
           {% if value.variant.metafields.custom.bundle_icon %}
             <img
@@ -151,19 +154,6 @@
                 <span class="final-price">{{ value.variant.price | money }}</span>
                 <span class="compare-price">{{ value.variant.compare_at_price | money }}</span>
               </div>
-
-              {% if value.variant.metafields.custom.is_best_value or value.variant.metafields.custom.is_best_seller %}
-                <img
-                  alt="best-value-badge"
-                  class="best-value-flag lazyloaded"
-                  {% if value.variant.metafields.custom.is_best_value %}
-                    src="https://cdn.shopify.com/s/files/1/0121/8412/5499/files/best_value_transparent.png?v=1746715289"
-                  {% endif %}
-                  {% if value.variant.metafields.custom.is_best_seller %}
-                    src="https://cdn.shopify.com/s/files/1/0121/8412/5499/files/best_seller_transparent.png?v=1746715290"
-                  {% endif %}
-                >
-              {% endif %}
             </div>
           </div>
         </div>
