Refactor "Most Popular" badge implementation by renaming the class to "most-popular-badge-ribbon" and updating associated CSS styles for improved responsiveness and visual appeal. Remove outdated styles for better code clarity.

--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -105,7 +105,7 @@
         for="{{ input_id }}"
       >
         {% if value.variant.metafields.custom.is_popular %}
-          <div class="most-popular-badge">Most Popular</div>
+          <div class="most-popular-badge-ribbon">Most Popular</div>
         {% endif %}
         <div class="bundle-icon-input-container">
           {% if value.variant.metafields.custom.bundle_icon %}
