--- a/assets/custom.css
+++ b/assets/custom.css
@@ -224,21 +224,10 @@
   transition: 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-.ghm-offer-selector ul li label .most-popular-badge {
-  position: absolute;
-  top: -1rem;
-  right: 0;
-  background: #f97fc1;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1rem;
-  padding: 0.5rem 3rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
+@media (min-width: 1440px) {
+  .ghm-offer-selector ul li label {
+    min-height: 12rem;
+  }
 }
 
 .ghm-offer-selector ul li label:hover {
@@ -450,10 +439,6 @@
   width: 5.875rem;
   top: 0;
   right: 3rem;
-}
-
-/* .best-seller-flag-space { */
-  /* padding-right: 7.5rem; */
 }
 
 .ghm-offer-selector .purchase-type-options {
@@ -993,4 +978,71 @@
 
 .pricing-container {
   position: relative;
+}
+
+.most-popular-badge-ribbon {
+  position: absolute;
+  top: -1.1rem;
+  right: 2rem;
+  z-index: 10 !important;
+  background: #f97fc1;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding: 0.5rem 2rem;
+  border-radius: 0;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
+@media (min-width: 768px) {
+  .most-popular-badge-ribbon {
+    font-size: 1rem;
+    padding: 0rem 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .most-popular-badge-ribbon {
+    font-size: 1.2rem;
+    padding: 0rem 2rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .most-popular-badge-ribbon {
+    font-size: 1.2rem;
+    padding: 0.5rem 2.5rem;
+  }
+}
+
+.most-popular-badge-ribbon::before,
+.most-popular-badge-ribbon::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 1rem;
+  height: 1rem;
+  background: transparent;
+  border-bottom: 1rem solid rgb(255, 196, 87);
+  border-left: 0.5rem solid transparent;
+  border-right: 0.5rem solid transparent;
+  z-index: -1 !important;
+}
+
+.most-popular-badge-ribbon::before {
+  left: -7px;
+  transform: skewX(-25deg);
+}
+
+.most-popular-badge-ribbon::after {
+  right: -7px;
+  transform: skewX(25deg);
 }
